Fix entry disappearing too early from updatable page

BUG: 427801
FIXED-in: 5.77